@@ -6,6 +6,8 @@ changes relative to sbcl-1.3.3:
     is less likely to cause confusion in the compiler.
   * bug fix: DOCUMENTATION works as intended for classes with non-standard
     metaclasses
+  * bug fix: (TYPEP <extended-sequence> <extended-sequence-class>) no longer
+    returns NIL in certain situations
   * enhancement: who-sets and who-references work on DEFGLOBAL. (lp#1552997)
   * enhancement: CONSTANTP understands backquote.
     e.g. (CONSTANTP '`(0 (,CHAR-CODE-LIMIT))) => T
